updated the code & pom file